<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSuggestion"
    android:paddingTop="40dp"
    android:orientation="vertical"
    android:background="#E6E5E5"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sugges"
        android:textSize="30sp"
        android:textColor="#14A2E4"
        android:fontFamily="@font/tommyextrabold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:id="@+id/txtre"/>

    <LinearLayout
        android:id="@+id/toplayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/infogreen"
            android:contentDescription="@string/descimage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adresse_hint"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/tommyextrabold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#616060"
            android:layout_marginHorizontal="7dp"
            android:background="@drawable/editbg"
            android:textColor="@color/black"
            android:hint="@string/adresse_hint"
            android:id="@+id/adresse_suggestion"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:id="@+id/scndlayout"
        android:background="@drawable/bg"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:padding="10dp"
        android:paddingTop="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textColor="@color/black"
            android:fontFamily="@font/tommyextrabold"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/description_suggestion"
            android:layout_height="100dp"
            android:textColor="@color/black"
            android:textColorHint="#616060"
            android:hint="@string/description_hint"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="7dp"
            android:background="@drawable/editbg"/>
    </LinearLayout>
    <Button
        android:id="@+id/deposer_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scndlayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#000000"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/tommyextrabold"
        android:text="@string/deposer"
        tools:ignore="ObsoleteLayoutParam" />

    <Button
        android:id="@+id/messuggestions_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="20dp"
        android:text="@string/mes_Suggestions"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/tommyextrabold"/>


</LinearLayout>