<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@android:color/white">
            <TextView
                android:id="@+id/id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no1"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/adresse_txt"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/tommyextrabold"
                android:text="@string/Adresse1"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/id_txt"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/description_txt"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/Description1"
                android:textColor="@color/black"

                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/adresse_txt"
                app:layout_constraintTop_toBottomOf="@+id/adresse_txt" />
            <ImageView
                android:id="@+id/image_view"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/baseline_touch_app_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>