<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/drawerlayout"
    tools:openDrawer="start"
    android:background="@drawable/main_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="491dp"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:id="@+id/topview"
            android:background="@drawable/eclipse">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginStart="-13dp"
                >
                <ImageButton
                    android:id="@+id/menubtn"
                    android:backgroundTint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_reorder_24"/>
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:gravity="center"
                android:fontFamily="@font/tommyextrabold"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prob"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/tommyextrabold"

                />

        </LinearLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/topview"
            android:columnCount="1"
            android:layout_marginTop="-80dp">

            <androidx.cardview.widget.CardView
                android:layout_height="200dp"
                android:layout_width="350dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                android:id="@+id/RecalamationCard"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/cardview">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reclam"
                        android:layout_margin="20dp"
                        android:textSize="25sp"
                        android:fontFamily="@font/tommyextrabold"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reclamar"
                        android:textSize="25sp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/tommyextrabold"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="75dp"
                        android:src="@drawable/info"
                        android:layout_gravity="end"
                        android:layout_marginRight="5dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_height="200dp"
                android:layout_width="350dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                android:id="@+id/SuggestionCard"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/cardviewg"

                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sugges"
                        android:textSize="25sp"
                        android:layout_margin="20dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/tommyextrabold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/suggesar"
                        android:textSize="25sp"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/tommyextrabold"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:layout_gravity="end"
                        android:src="@drawable/lightbulb" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>

    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/navigation_menu"
        />


</androidx.drawerlayout.widget.DrawerLayout>